@@ -1,8 +1,8 @@
 Package: gdsfmt
 Type: Package
 Title: R Interface to CoreArray Genomic Data Structure (GDS) Files
-Version: 1.21.2
-Date: 2019-10-14
+Version: 1.21.3
+Date: 2019-10-25
 Depends: R (>= 2.15.0), methods
 Suggests: parallel, digest, crayon, RUnit, knitr, BiocGenerics
 Author: Xiuwen Zheng [aut, cre] (<https://orcid.org/0000-0002-1390-0708>),
